# purelint

./: README.md  example.py  example2.py  example3.py  pyproject.toml
src/purelint/: __init__.py
tests/: test_functional.py
